# cpmai

./: .env.example  .gitignore  Dockerfile  README.md  decision_report_generator.py  drawing_section_classifier.py  ingestion_service.py  main.py  project_evaluator_assistant.py  pyproject.toml  quote_parser_lambda.py  requirements.txt  scope_gap_checker.py  trade_scope_extractor_lambda.py
lambda_functions/: __init__.py
lambda_functions/process_project_files_lambda/: .gitignore  README.md  ai_service.py  business_logic.py  controller.py  database.py  file_service.py  gemini_manager.py  lambda_function.py  models.py  openai_manager.py  requirements.txt  s3_manager.py  service.py  test.py  test_pdf_handling.py
old/: decision_report_generator.py  drawing_section_classifier.py  ingestion_service.py  project_evaluator_assistant.py  quote_parser_lambda.py  scope_gap_checker.py
src/: app.py
src/api/: __init__.py
src/api/v1/: __init__.py  chat.py  files.py  hearbeat.py  project.py  prompt.py  report.py  train.py
src/core/: settings.py
src/core/config/: app_settings.py  utils.py
src/cpmai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dependencies/auth/: auth.py
src/domains/chat/: exceptions.py  flows.py  pipelines.py  schemas.py
src/domains/file_processors/: __init__.py  flows.py
src/domains/files/: flows.py  models.py  schemas.py
src/domains/project/: flows.py  models.py  schemas.py
src/domains/prompt/: exceptions.py  flows.py  schemas.py
src/domains/report/: flows.py
src/exceptions/: base_exception.py
(+14 files in other folders)
