[project]
name = "cpmai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.29.0",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.4.0",
    "requests>=2.32.3",
    "ruff>=0.11.9",
    "uvicorn>=0.34.2",
]




[project.optional-dependencies]
dev = ["ruff>=0.11.9"]